manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: secure-web
  namespace: secure-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: secure-web

  template:
    metadata:
      labels:
        app: secure-web

    spec:
      serviceAccountName: secure-web-sa
      automountServiceAccountToken: false
      

      containers:
        - name: web
          image: nginxinc/nginx-unprivileged:alpine

          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp

      volumes:
        - name: nginx-tmp
          emptyDir: {}
